Bullismo/traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "game/script.rpy", line 354
    !vinto
    ^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 354
    !vinto
    ^^^^^^
SyntaxError: invalid syntax

Linux-6.18.5-arch1-1-x86_64-with-glibc2.42 x86_64
Ren'Py 8.5.2.26010301
Bullismo 1.0
Sun Jan 25 16:30:50 2026
